ossm/gateway-out-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello-world-gateway-out-egress
spec:
  selector:
    istio: egressgateway
  servers:
  - hosts:
    - 'httpbin.org'
    port:
      name: http
      number: 80
      protocol: HTTP
