ossm/gateway-out.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello-world-gateway-out
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - 'hello-out.apps.apps.sandbox1706.opentlc.com'
    port:
      name: http
      number: 80
      protocol: HTTP
