ossm/destinationrule-server.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: server
spec:
  host: server
  subsets:
  - name: v1
    labels:
      app: server
