ossm/virtual-service-client.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: hello-world-go
  name: client
spec:
  hosts:
  - 'client'
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: client
        port:
          number: 8080
      weight: 100
