ossm/virtual-service-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: egress
spec:
  hosts:
  - httpbin.org
  gateways:
  - mesh
  - hello-world-gateway-out-egress
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 80
  - match:
    - gateways:
      - hello-world-gateway-out-egress
      port: 80
    route:
    - destination:
        host: httpbin.org
        port:
          number: 80
      weight: 100
