ossm/virtual-service-out.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: hello-world-go
  name: hello-ingress-out
spec:
  hosts:
  - 'hello-out.apps.apps.sandbox1706.opentlc.com'
  gateways:
  - hello-world-gateway-out
  http:
  - route:
    - destination:
        host: server-out
        port:
          number: 8080
      weight: 100
