ossm/virtual-service-server-fault.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: hello-world-go
  name: server
spec:
  hosts:
  - 'server'
  gateways:
  - mesh
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
    route:
    - destination:
        host: server
        port:
          number: 8080
      weight: 100
