ossm/virtual-service-server-out.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: hello-world-go
  name: server-out
spec:
  hosts:
  - 'server-out'
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: server-out
        port:
          number: 8080
      weight: 100
