ossm/virtual-service-server2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: hello-world-go
  name: server2
spec:
  hosts:
  - 'server2'
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: server2
        port:
          number: 8080
      weight: 100
